--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -485,9 +485,35 @@
 
         - name: Install build dependencies
           run: |
-            brew install llvm create-dmg libyuv pkg-config
-            echo "Installed dependencies:"
-            brew list
+            brew install llvm create-dmg pkg-config cmake ninja
+
+        - name: Build and install libyuv
+          run: |
+            echo "Building libyuv from source..."
+            cd /tmp
+            git clone https://chromium.googlesource.com/libyuv/libyuv
+            cd libyuv
+            mkdir build && cd build
+            cmake -G Ninja -DCMAKE_BUILD_TYPE=Release ..
+            ninja
+            sudo ninja install
+            # Create pkg-config file for libyuv
+            sudo tee /usr/local/lib/pkgconfig/libyuv.pc << EOF
+            prefix=/usr/local
+            exec_prefix=\${prefix}
+            libdir=\${exec_prefix}/lib
+            includedir=\${prefix}/include
+            
+            Name: libyuv
+            Description: YUV scaling and conversion library
+            Version: 1.0.0
+            Libs: -L\${libdir} -lyuv
+            Cflags: -I\${includedir}
+            EOF
+            
+            echo "Verifying libyuv installation..."
+            pkg-config --libs libyuv || echo "libyuv not found in pkg-config"
+            ls -l /usr/local/lib/libyuv* || echo "libyuv library not found"
 
         - name: Create app bundle directories
           run: |
@@ -498,7 +524,9 @@
         - name: Build Flutter app
           env:
             MACOSX_DEPLOYMENT_TARGET: "12.3"
-            PKG_CONFIG_PATH: "/opt/homebrew/lib/pkgconfig:/usr/local/lib/pkgconfig:$PKG_CONFIG_PATH"
+            PKG_CONFIG_PATH: "/usr/local/lib/pkgconfig:$PKG_CONFIG_PATH"
+            LIBRARY_PATH: "/usr/local/lib:$LIBRARY_PATH"
+            CPATH: "/usr/local/include:$CPATH"
           run: |
             if [ "aarch64-apple-darwin" = "aarch64-apple-darwin" ]; then
               MIN_MACOS_VERSION="12.3"
