--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -142,7 +142,7 @@ jobs:
         uses: actions/checkout@v4
         with:
             repository: rustdesk/rustdesk
-            ref: ${{ env.VERSION == 'master' && 'HEAD' || format('refs/tags/{0}', env.VERSION) }}
+            # ref: ${{ env.VERSION == 'master' && 'HEAD' || format('refs/tags/{0}', env.VERSION) }}
             submodules: recursive
 
       - name: Restore bridge files
