--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -199,7 +199,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: rustdesk/rustdesk
-          ref: refs/tags/${{ env.VERSION }}
+          # ref: refs/tags/${{ env.VERSION }}
           submodules: recursive
        
       - name: Checkout source code
